<resources>
    <string name="app_name">HolaMundo</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="to">To</string>
    <string name="send">Send</string>
    <string name="_34">+34</string>
    <string name="apellidos">Apellidos</string>
    <string name="cancelar">CANCELAR</string>
    <string name="guardar">GUARDAR</string>
    <string name="nombre">Nombre</string>
    <string name="notas">Notas</string>
    <string name="telefono">Telefono</string>
    <string name="hola_mundo">Hola Mundo!</string>
    <string name="aa_aa">aa:aa</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
</resources>
