<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="10dp"
    android:paddingLeft="10dp">

    <EditText
        android:id="@+id/txtNombre1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/nombre"
        tools:ignore="RtlHardcoded" />
    <EditText
        android:id="@+id/txtFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtNombre1"
        android:ems="10"
        android:hint="@string/dd_mm_yyyy"
        tools:ignore="RtlHardcoded" />
    <EditText
        android:id="@+id/txtHora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/aa_aa"
        android:layout_below="@id/txtNombre1"
        android:layout_toRightOf="@id/txtFecha"
        android:layout_toEndOf="@id/txtFecha"/>
</RelativeLayout>